--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "clipboard-copy": "^2.0.0",
     "preact": "^8.2.9",
     "preact-compat": "^3.18.0",
     "preact-i18n": "^1.2.1",
     "preact-material-components": "^1.4.4",
+    "react-clipboard.js": "^1.1.3",
     "scrypt-async": "^2.0.0"
   },
   "devDependencies": {
