--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "parcel ./index.html --no-source-maps",
+    "build": "parcel build ./index.html --no-source-maps",
     "dev": "parcel ./index.html --https --hmr-hostname 127.0.0.1 --no-source-maps"
   },
   "author": "",
