feat: copy Snackbar

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
     "presets": ["preact"],
-    "plugins": ["transform-class-properties"]
+    "plugins": ["transform-class-properties","transform-decorators-legacy"]
   }
