--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "preact-compat": "^3.18.0",
     "preact-i18n": "^1.2.1",
     "preact-material-components": "^1.4.4",
-    "react-clipboard.js": "^1.1.3",
     "scrypt-async": "^2.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-preact": "^1.1.0",
     "node-sass": "^4.9.0",
     "parcel-plugin-sw-precache": "^0.5.1"
