--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Master Password — Secure your life, forget your passwords.",
   "main": "index.html",
   "scripts": {
-    "build": "parcel build ./index.html --no-source-maps",
+    "build": "parcel build ./index.html --out-dir docs --no-source-maps",
     "dev": "parcel ./index.html --https --hmr-hostname 127.0.0.1 --no-source-maps"
   },
   "author": "zhangchen915",
@@ -24,6 +24,6 @@
     "babel-preset-preact": "^1.1.0",
     "cssnano": "^4.0.5",
     "node-sass": "^4.9.0",
-    "parcel-plugin-sw-precache": "^0.5.1"
+    "parcel-plugin-sw-precache": "^1.0.2"
   }
 }
